@@ -66,6 +66,7 @@ Version 1.5.1 -- CVS
   - Get alternating row colors of addressbook in sync with mailbox list.
   - Give proper error when PEAR DB not found.
   - Remove inappropriate strip_tags() from add-to-addressbook (#968475).
+  - Prefs caching didn't work properly with register_globals off (#995102).
 
 Version 1.5.0
 --------------------
